--- a/stack/packages/ui/package.json
+++ b/stack/packages/ui/package.json
@@ -7,6 +7,8 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/react-grid-layout": "^1.3.6",
@@ -20,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-resizable": "^3.0.5",
     "recharts": "2.15.4",
+    "sonner": "^2.0.7",
     "swapy": "^1.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
