--- a/stack/packages/ui/package.json
+++ b/stack/packages/ui/package.json
@@ -13,11 +13,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-grid-layout": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
@@ -57,6 +59,7 @@
     "./components/shared/AnimatedBackground": "./src/components/shared/AnimatedBackground/index.ts",
     "./components/shared/Animations": "./src/components/shared/Animations/index.ts",
     "./components/shared/Animations/*": "./src/components/shared/Animations/*.tsx",
+    "./components/shared/PageTransition": "./src/components/shared/PageTransition/index.ts",
     "./hooks/*": "./src/hooks/*.ts"
   }
 }
