--- a/stack/apps/home/package.json
+++ b/stack/apps/home/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.4.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
