--- a/stack/apps/api/package.json
+++ b/stack/apps/api/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "prebuild": "prisma generate",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "tsx src/index.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -20,13 +20,13 @@
     "better-auth": "^1.1.14",
     "hono": "^4.6.16",
     "jsonwebtoken": "^9.0.3",
+    "tsx": "^4.19.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.2",
     "prisma": "^6.1.0",
-    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
