--- a/stack/apps/daemon/Cargo.toml
+++ b/stack/apps/daemon/Cargo.toml
@@ -12,6 +12,7 @@ tokio-util = { version = "0.7", features = ["io", "codec", "rt"] }
 # Web framework
 axum = { version = "0.7", features = ["ws", "multipart", "tokio"] }
 axum-extra = { version = "0.9", features = ["typed-header"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout"] }
 
