--- a/.github/workflows/panel-docker.yml
+++ b/.github/workflows/panel-docker.yml
@@ -19,7 +19,7 @@ env:
 jobs:
   build-and-push:
     name: Build and Push Docker Image
-    runs-on: github-runner-builder
+    runs-on: self-hosted
     permissions:
       contents: read
 
