- fixes made to Dockerfile as well as some install script changes

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build && cp -r .next/static .next/standalone/apps/web/.next/static && cp -r public .next/standalone/apps/web/public 2>/dev/null || true",
-    "start": "HOSTNAME=:: node .next/standalone/apps/web/server.js",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "typecheck": "tsc --noEmit"
