--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,6 +3,8 @@ name: Build and Release Docker Images
 on:
   release:
     types: [created]
+  repository_dispatch:
+    types: [release-created]
   workflow_dispatch:
     inputs:
       version:
@@ -50,6 +52,9 @@ jobs:
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             VERSION="${{ github.event.inputs.version }}"
             TAG="v$VERSION"
+          elif [ "${{ github.event_name }}" = "repository_dispatch" ]; then
+            VERSION="${{ github.event.client_payload.version }}"
+            TAG="${{ github.event.client_payload.tag }}"
           else
             TAG="${{ github.event.release.tag_name }}"
             VERSION="${TAG#v}"
